# modular_Django_inertia

./: .env  .env example  .gitignore  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.json  vite.config.js
project/: middleware.py  settings.py  urls.py
project/templates/: base.html
project/web/src/: main.jsx
project/web/src/layouts/: Layout.tsx
testapp/: urls.py  views.py
testapp/pages/: Example.tsx  index.tsx
web/src/: main.jsx
web/src/layouts/: Layout.tsx
